@@ -1,3 +1,8 @@
+2001-03-13  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* tif_getimage.c: Added support for 16bit minisblack/miniswhite 
+	images in RGBA interface.
+
 2001-03-02  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* Added TIFFTAG_COPYRIGHT support.
